Do not automatically mount CephFS
Otherwise, VM does not boot.

--- a/ceph2/provisioning/roles/ceph-mds/tasks/main.yml
+++ b/ceph2/provisioning/roles/ceph-mds/tasks/main.yml
@@ -32,4 +32,4 @@
 
 - name: Add CephFS to /etc/fstab
   sudo: yes
-  lineinfile: dest=/etc/fstab line="id=admin /mnt/cephfs fuse.ceph defaults 0 0"
+  lineinfile: dest=/etc/fstab line="id=admin /mnt/cephfs fuse.ceph defaults,noauto 0 0"
