--- a/ceph2/Vagrantfile
+++ b/ceph2/Vagrantfile
@@ -17,6 +17,8 @@ Vagrant.configure(2) do |config|
                   '--device', 0,
                   '--type', 'hdd',
                   '--medium', ceph_data_disk]
+    vb.customize ['modifyvm', :id,
+                  '--memory', 1024]
   end
   
   config.vm.provision 'ansible' do |ansible|
