--- a/ceph2/Vagrantfile
+++ b/ceph2/Vagrantfile
@@ -5,6 +5,8 @@ Vagrant.configure(2) do |config|
   config.vm.box = 'ubuntu/trusty64'
   config.vm.hostname = 'ceph2'
 
+  config.vm.synced_folder "shared/", "/srv/shared"
+
   config.vm.provider "virtualbox" do |vb|
     unless File.exist?(ceph_data_disk)
       vb.customize ['createhd',
