--- a/ceph1/Vagrantfile
+++ b/ceph1/Vagrantfile
@@ -2,5 +2,6 @@ Vagrant.configure(2) do |config|
   config.vm.define 'ceph1'
   config.vm.box = 'ubuntu/trusty64'
   config.vm.hostname = 'ceph1'
+  config.vm.synced_folder "shared/", "/srv/shared"
 end
 
