Increase memory to 2Gb
Required to build ceph.

--- a/ceph1/Vagrantfile
+++ b/ceph1/Vagrantfile
@@ -3,5 +3,10 @@ Vagrant.configure(2) do |config|
   config.vm.box = 'ubuntu/trusty64'
   config.vm.hostname = 'ceph1'
   config.vm.synced_folder "shared/", "/srv/shared"
+
+  config.vm.provider "virtualbox" do |vb|
+    vb.customize ['modifyvm', :id,
+                  '--memory', 2048]
+  end
 end
 
