--- a/ceph-devel/Vagrantfile
+++ b/ceph-devel/Vagrantfile
@@ -8,5 +8,12 @@ Vagrant.configure(2) do |config|
     vb.customize ['modifyvm', :id,
                   '--memory', 2048]
   end
+
+  config.vm.provision 'ansible' do |ansible|
+    ansible.playbook = 'provisioning/ceph.yml'
+    ansible.groups = {
+      'ceph' => ['ceph-devel']
+    }
+  end
 end
 
