--- a/ceph-devel/Vagrantfile
+++ b/ceph-devel/Vagrantfile
@@ -7,6 +7,13 @@ Vagrant.configure(2) do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.customize ['modifyvm', :id,
                   '--memory', 2048]
+
+    if not RUBY_PLATFORM.downcase.include?("mswin")
+      vb.customize ['modifyvm', :id,
+                    '--cpus',
+                    `awk "/^processor/ {++n} END {print n}" /proc/cpuinfo 2> /dev/null || sh -c 'sysctl hw.logicalcpu 2> /dev/null || echo ": 2"' | awk \'{print \$2}\' `.chomp ]
+
+    end
   end
 
   config.vm.provision 'ansible' do |ansible|
