--- a/kdenlive/Vagrantfile
+++ b/kdenlive/Vagrantfile
@@ -71,5 +71,6 @@ Vagrant.configure("2") do |config|
     apt-get update
     env DEBIAN_FRONTEND=noninteractive apt-get install -y kdenlive dbus-x11 \
         vlc breeze-icon-theme
+    strip --remove-section=.note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
   SHELL
 end
